Logical flow support
- Added if/else if/else statement supports, with their logics almost fully supported.
- One-statement execution support for if/else if/else.
- Brackets are optional for if/else if/else/input/print, as long as you give the next statement on the next line, otherwise, they are required.